Prevent .task-editor from overflowing container

--- a/src/domains/task/styles/editor.css
+++ b/src/domains/task/styles/editor.css
@@ -1,5 +1,6 @@
 .task-editor {
   text-align: right;
+  width: 100%;
 }
 
 .task-name-input {
